crates/cribo/tests/snapshots/bundled_code@stickytape_explicit_relative_import_in_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/stickytape_explicit_relative_import_in_init/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys, types
def __cribo_init___cribo_a7defc_greetings():
    if '__cribo_a7defc_greetings' in sys.modules:
        return sys.modules['__cribo_a7defc_greetings']
    module = types.ModuleType('__cribo_a7defc_greetings')
    module.__file__ = '/Volumes/workplace/GitHub/ophidiarium/cribo/crates/cribo/tests/fixtures/bundling/stickytape_explicit_relative_import_in_init/greetings/__init__.py'
    sys.modules['__cribo_a7defc_greetings'] = module
    sys.modules['greetings'] = module
    __all__ = ["message"]
    module.__all__ = ['message']
    return module
__cribo_modules = {'greetings': '__cribo_a7defc_greetings'}
__cribo_init_functions = {'__cribo_a7defc_greetings': __cribo_init___cribo_a7defc_greetings}
class CriboBundledFinder:

    def __init__(self, module_registry, init_functions):
        self.module_registry = module_registry
        self.init_functions = init_functions

    def find_spec(self, fullname, path, target=None):
        if fullname in self.module_registry:
            synthetic_name = self.module_registry[fullname]
            if synthetic_name not in sys.modules:
                init_func = self.init_functions.get(synthetic_name)
                if init_func:
                    init_func()
            import importlib.util
            return importlib.util.find_spec(synthetic_name)
        return None
sys.meta_path.insert(0, CriboBundledFinder(__cribo_modules, __cribo_init_functions))
message = "Hello"
__cribo_init___cribo_a7defc_greetings()
sys.modules['greetings'].message = message
greetings = sys.modules['greetings']
print(greetings.message)
