crates/cribo/tests/snapshots/bundled_code@stickytape_import_from_as_module.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/stickytape_import_from_as_module/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
message_greetings_greeting = "Hello"
g = types.SimpleNamespace()
g.message = message_greetings_greeting
print(g.message)
