crates/cribo/tests/snapshots/bundled_code@stickytape_import_from_as_value.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/stickytape_import_from_as_value/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greeting ─
message = "Hello"

# ─ Entry Module: main ─
m = message
print(m)
