crates/cribo/tests/snapshots/bundled_code@stickytape_script_using_from_to_import_module.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/stickytape_script_using_from_to_import_module/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
message_greetings_greeting = "Hello"
greeting = types.SimpleNamespace(message=message_greetings_greeting)
print(greeting.message)
